syntax = "proto3";

package usersV1;

option go_package = "protobuf/users;users";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protobuf/users/model.proto";


message ListUsersRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message ListUsersResponse {
    repeated User users = 1;
    int64 total_count = 2;
    int64 limit = 3;
    int64 offset = 4;
}

message GetUserRequest {
    string uuid = 1;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    bool enable = 4;
}

message UpdateUserRequest {
    string uuid = 1;
    string username = 2;
    string email = 4;
    bool enable = 5;
}

message DeleteUserRequest {
    string uuid = 1;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string access_token = 1;
    string refresh_token = 2;
}

message LogoutRequest {}

message LogoutResponse {}

message RegisterRequest {
    string username = 2;
    string password = 3;
    string email = 4;
}

message RegisterResponse {
    string uuid = 1;
    string username = 2;
    string email = 4;
}

message VerifyTokenRequest {
    string access_token = 1;
}

message VerifyTokenResponse {
    string access_token = 1;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    string access_token = 1;
    string refresh_token = 2;
}


service UserService {

    // List Users
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse) {
        option (google.api.http) = {
            get: "/v1/users"
        };
    }
    // Get User
    rpc GetUser (GetUserRequest) returns (User) {
        option (google.api.http) = {
          get: "/v1/users/{uuid}"
        };
    }

    // Create User object request
    rpc CreateUser (CreateUserRequest) returns (User) {
        option (google.api.http) = {
            post: "/v1/users"
            body: "*"
        };
    }

    // Update User object request
    rpc UpdateUser (UpdateUserRequest) returns (User) {
        option (google.api.http) = {
            put: "/v1/users/{uuid}"
            body: "*"
        };
    }

    // Delete User object request
    rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty) {
        option (google.api.http) = {
          delete: "/v1/users/{uuid}"
        };
    }

    // Login login user
    rpc Login(LoginRequest) returns (LoginResponse) {
        option (google.api.http) = {
            post: "/v1/users/login"
            body: "*"
        };
    }

    // Login login user
    rpc Register(RegisterRequest) returns (RegisterResponse) {
        option (google.api.http) = {
            post: "/v1/users/login"
            body: "*"
        };
    }

    // Logout will close user session
    rpc Logout(LogoutRequest) returns (LogoutResponse) {
        option (google.api.http) = {
            post: "/v1/users/logout"
            body: "*"
        };
    }

    // VerifyToken will verify and return token
    rpc VerifyToken(VerifyTokenRequest) returns (VerifyTokenResponse) {
        option (google.api.http) = {
            post: "/v1/users/token/verify"
            body: "*"
        };
    }

    // RefreshToken will check and return new token
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {
        option (google.api.http) = {
            post: "/v1/users/token/refresh"
            body: "*"
        };
    }
}